<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Nubia Red Magic</string>
    <string name="enable_gestures_title">Enable</string>
    <string name="enable_gestures_summary"></string>
    <string name="double_tap_to_wake_title">Tap to wake</string>
    <string name="double_tap_to_wake_summary">Double-tap anywhere on the screen to wake device</string>
    <string name="proxi_summary_head">Check proximity sensor for handling gesture</string>
    <string name="proxi_title_head">Proximity check</string>
    <string name="off_screen_gesture_feedback_summary_head">Enable haptic feedback for gestures</string>
    <string name="off_screen_gesture_feedback_title_head">Haptic feedback</string>
    <string name="category_gestures_title">Device gestures</string>
    <string name="choose_app">Choose app</string>
    <string name="offscreen_gesture_title">Offscreen gestures</string>
    <string name="category_circle_gesture">Circle gesture</string>
    <string name="category_arrow_gesture">Arrow gesture</string>
    <string name="category_gestures_summary">Configure gesture actions</string>
    <string name="torch_entry">Flashlight</string>
    <string name="disabled_entry">Disabled</string>
    <string name="camera_entry">Camera</string>
    <string name="music_play_entry">Play / pause music</string>
    <string name="music_prev_entry">Prev track</string>
    <string name="music_next_entry">Next track</string>
    <string name="wake_entry">Wakeup</string>
    <string name="not_ready_summary">Resolving...</string>
    <string name="resolve_failed_summary">Resolving app failed</string>
    <string name="category_swipe_gesture">Swipe gesture</string>
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
    <string name="vib_test">Test</string>
    <string name="advanced_settings">Advanced</string>
    <string name="doze_category_title">Ambient display</string>
    <string name="doze_category_summary">Wake screen when you receive notifications</string>
    <string name="wave_check_summary">Pulse notifications on hand wave</string>
    <string name="wave_check_title">Hand wave</string>
    <string name="tilt_check_summary">Pulse notifications when device is tilted</string>
    <string name="tilt_check_title">Tilt</string>
    <string name="pocket_check_summary">Pulse notifications on removal from pocket</string>
    <string name="pocket_check_title">Pocket</string>
    <string name="ambient_display_enable">Ambient display must be enabled in display settings</string>
    <string name="slider_mode_off">Off</string>
    <string name="slider_mode_vibrate">Vibrate</string>
    <string name="slider_mode_silent">Silent</string>
    <string name="slider_mode_priority">Priority only</string>
    <string name="slider_mode_alarm">Alarms only</string>
    <string name="slider_mode_dnd">Total silence</string>
    <string name="slider_mode_title_top">Top position</string>
    <string name="category_slider">Slider</string>
    <string name="category_led">Back LED strip</string>
    <string name="led_effect_title">Effect</string>
</resources>
